--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,12 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Cyberpunk 2077</title>
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+         rel="stylesheet"
+      />
    </head>
    <body>
       <header id="header" class="header">
@@ -57,7 +63,7 @@
             </div>
          </div>
       </header>
-      <section class="about">
+      <section class="section-first">
          <div class="container">
             <div class="ag-wrapper">
                <h1>Найт-Сити изменит тебя навсегда!</h1>
@@ -82,7 +88,7 @@
             </div>
          </div>
       </section>
-      <section class="giveaway" id="giveaway">
+      <section class="section-second" id="giveaway">
          <div class="container">
             <div class="playtoearn">
                <div class="pte-wrapper">
@@ -144,8 +150,62 @@
             </div>
          </div>
       </section>
+      <section class="section-third">
+         <div class="container">
+            <div class="part-wrapper">
+               <div class="third-leftside">
+                  <img src="" id="monitor" alt="monitor" />
+                  <img src="" id="collaboration" alt="HP and Cyberpnunk Logo" />
+               </div>
+               <div class="third-rightside">
+                  <h1>Полное погружение вместе с HP</h1>
+                  <h3>
+                     Погрузись в современные экшен-игры с реалистичным
+                     изображением с помощью монитора с диагональю 23,8 дюйма,
+                     созданном для отображения максимально насыщенных цветов.
+                     Успевай реагировать на любые события с временем отклика 1
+                     мс и частотой в 144 Гц!
+                  </h3>
+                  <p>Яркие насыщенные цвета</p>
+                  <p>Кристальная четкость изображения</p>
+                  <p>Быстрые движения и плавный геймплей</p>
+                  <button type="button" class="more">Подробнее</button>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section class="section-four">
+         <div class="four-leftside"></div>
+         <div class="four-rightside">
+            <div class="wrapper">
+               <h1>Купить игру Cyberpunk 2077</h1>
+               <h3>В комплект входит:</h3>
+               <div class="div">
+                  <p>Футляр с игровыми дисками</p>
+                  <p>Футляр с кодом для загрузки игры и дисками (pc)</p>
+                  <p>Справочник с информацией об игровом мире</p>
+               </div>
+               <div class="platforms">
+                  <h3>Выберите платформу:</h3>
+                  <img src="" alt="" id="platforms" />
+               </div>
+            </div>
+         </div>
+      </section>
       <footer id="footer" class="footer">
-         <div class="container"></div>
+         <div class="container">
+            <div class="footer-left">
+               <img src="" alt=" " id="cdlogo" />
+               <img src="" alt=" " id="cdproject" />
+            </div>
+            <div class="footer-right">
+               <a href="#">Лицензия</a>
+               <a href="#"><a href="#">Политика конфиденциальности</a></a>
+            </div>
+         </div>
+         <div class="footer-down">
+            <p>CD PROJEKT®, Cyberpunk®, Cyberpunk 2077®</p>
+         </div>
       </footer>
    </body>
 </html>
